feat: Add route protection for disabled services
- Add RouteGuard component to prevent access to disabled services
- Protect troubleshoot, maintenance, and comingsoon routes
- Filter dashboard to only show enabled services
- Update service toggle functionality in header
- Clean up unused imports and variables

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,6 +21,7 @@
             "@utils/*": ["./src/utils/*"],
             "@hooks": ["./src/hooks"],
             "@pages/*": ["./src/pages/*"],
+            "@services/*": ["./src/services/*"],
         }
     },
     "include": ["src/**/*.ts", "src/**/*.tsx"],
