feat: Complete plugin rebrand from Tukitaki to Versatile
BREAKING CHANGE: Plugin name, namespaces, and all references changed from Tukitaki to Versatile

- Update all namespaces: Tukitaki\ → Versatile\
- Update all constants: TUKITAKI_* → VERSATILE_*
- Update all functions: tukitaki_* → versatile_*
- Update all AJAX actions: tukitaki_* → versatile_*
- Update database table prefix: tukitaki_ → versatile_
- Update menu slugs and admin page references
- Update text domains: 'tukitaki' → 'versatile'

- Rename pages/tukitaki → pages/versatile
- Rename services/tukitaki-services.ts → services/versatile-services.ts
- Rename utils/tukitaki-declaration.ts → utils/versatile-declaration.ts
- Update all import paths and API action references
- Update root element ID: tukitaki-root → versatile-root
- Update response types: TukitakiResponseType → VersatileResponseType

- Core: Init.php, Enqueue.php, Routes.php
- Services: ServiceInit.php, MaintenanceMode.php, TroubleshootInit.php, ComingsoonMood.php
- Admin: MainMenu.php, SubMenu classes
- Helpers: All helper classes updated
- Database: Migration.php, DatabaseAbstract.php
- Models: EmailLogModel.php
- Traits: JsonResponse.php, RestResponse.php
- Views: Renamed view files and updated root element
- Frontend: All React components, services, and utilities

- composer.json: Package name and autoload namespace
- constants.php: All plugin constants
- Main plugin file: tukitaki.php → versatile.php
- View templates and admin pages

This maintains all existing functionality while providing complete rebrand to Versatile.

--- a/composer.json
+++ b/composer.json
@@ -1,15 +1,15 @@
 {
-	"name": "tukitaki/tukitaki",
+	"name": "versatile/versatile",
 	"description": "A WordPress plugin for lots of simple wordpress helper service",
 	"type": "wordpress-plugin",
 	"license": "GPL-2.0-or-later",
 	"version": "1.0.0",
 	"autoload": {
 		"psr-4": {
-			"Tukitaki\\": "inc/"
+			"Versatile\\": "inc/"
 		},
 		"files": [
-			"./inc/TukitakiGlobals.php"
+			"./inc/VersatileGlobals.php"
 		]
 	},
 	"authors": [
