--- a/package.json
+++ b/package.json
@@ -15,15 +15,21 @@
 	"author": "nurwp",
 	"license": "ISC",
 	"dependencies": {
+		"@dnd-kit/core": "^6.3.1",
+		"@dnd-kit/sortable": "^10.0.0",
+		"@dnd-kit/utilities": "^3.2.2",
 		"@hookform/resolvers": "^3.10.0",
 		"@radix-ui/react-accordion": "^1.2.3",
 		"@radix-ui/react-avatar": "^1.1.3",
 		"@radix-ui/react-checkbox": "^1.1.4",
+		"@radix-ui/react-collapsible": "^1.1.11",
 		"@radix-ui/react-dialog": "^1.1.14",
 		"@radix-ui/react-label": "^2.1.2",
 		"@radix-ui/react-popover": "^1.1.14",
 		"@radix-ui/react-radio-group": "^1.2.3",
 		"@radix-ui/react-select": "^2.1.6",
+		"@radix-ui/react-separator": "^1.1.7",
+		"@radix-ui/react-slider": "^1.3.5",
 		"@radix-ui/react-slot": "^1.1.2",
 		"@radix-ui/react-switch": "^1.1.3",
 		"@radix-ui/react-tabs": "^1.1.3",
@@ -44,6 +50,7 @@
 		"react-dom": "^18.3.1",
 		"react-hook-form": "^7.54.2",
 		"react-hot-toast": "^2.4.1",
+		"react-resizable-panels": "^3.0.3",
 		"react-router-dom": "^7.3.0",
 		"recharts": "^2.15.1",
 		"sonner": "^2.0.1",
