--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,9 +19,10 @@
             "@components/*": ["./src/components/*"],
             "@lib/*": ["./src/lib/*"],
             "@utils/*": ["./src/utils/*"],
-            "@hooks": ["./src/hooks"],
+            "@hooks/*": ["./src/hooks/*"],
             "@pages/*": ["./src/pages/*"],
             "@services/*": ["./src/services/*"],
+            "@entries/*": ["./src/entries/*"],
         }
     },
     "include": ["src/**/*.ts", "src/**/*.tsx"],
