refactor(modal): extract modal interactions to custom hook
style: remove extra whitespace in maintenance-settings
chore: rename npm script from mix:prod to mix-prod
build: minify maintenance and comingsoon css files

--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
 		"dev": "webpack --mode development --watch",
 		"mix": "npx mix watch",
 		"watch": "concurrently \"npm run dev\" \"npm run mix\"",
-		"mix:prod": "npx mix --production",
+		"mix-prod": "npx mix --production",
 		"prod": "webpack --mode production",
 		"make-pot": "wp i18n make-pot --exclude='node_modules, vendor' . languages/versatile-toolkit.pot",
 		"bundle": "wp dist-archive . ../versatile-toolkit.zip",
