feat(build): add mix-prod script and optimize CSS files
- Add production mix script to package.json
- Remove unused field unsetting in MaintenanceMode
- Simplify nonce verification logic
- Optimize CSS files by minifying them

--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
 	"scripts": {
 		"dev": "webpack --mode development --watch",
 		"mix": "npx mix watch",
+		"mix-prod": "npx mix --production",
 		"watch": "concurrently \"npm run dev\" \"npm run mix\"",
 		"prod": "webpack --mode production",
 		"make-pot": "wp i18n make-pot --exclude='node_modules, vendor' . languages/versatile-toolkit.pot",
